--- a/pages/services.html
+++ b/pages/services.html
@@ -2,45 +2,46 @@
 <html class="no-js" lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
+  <meta name="author" content="Huiyan Guima">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services</title>
 
   <link rel="stylesheet" href="../css/foundation.css">
   <link rel="stylesheet" href="../css/app.css">
     <link rel="icon" type="ico/png" href="../images/favicon.ico/favicon.ico"/>
-  <link  href="https://fonts.googleapis.com/css?family=Anton|Cutive+Mono|Fjalla+One|Muli|Open+Sans+Condensed:300|Padauk|Pathway+Gothic+One|Pontano+Sans|Signika|Titillium+Web|Yanone+Kaffeesatz" rel="stylesheet">
+  <link  href="https://fonts.googleapis.com/css?family=Anton&#124;Cutive+Mono&#124;Fjalla+One&#124;Muli&#124;Open+Sans+Condensed:300&#124;Padauk&#124;Pathway+Gothic+One&#124;Pontano+Sans&#124;Signika&#124;Titillium+Web&#124;Yanone+Kaffeesatz" rel="stylesheet">
 </head>
 
 
 <body>
-<!--HEADER: BEGINS-->
-<header class="row">
-<!--NAV: BEGINS-->
-<div class="title-bar" data-responsive-toggle="sub-menu" data-hide-for="medium">
-  <button class="menu-icon" type="button" data-toggle="sub-menu"></button>
-  <!--LOGO2: BEGINS-->
-  <img id="logo2" class="show-for-small-only" src="../images/logokm.png" alt="Logo">
-  <!--LOGO2: ENDS-->
-</div>
+  <!--HEADER: BEGINS-->
+  <header class="row">
+  <!--NAV: BEGINS-->
+  <div class="title-bar" data-responsive-toggle="sub-menu" data-hide-for="medium">
+    <button class="menu-icon" type="button" data-toggle="sub-menu"></button>
+    <!--LOGO2: BEGINS-->
+    <img id="logo2" class="show-for-small-only" src="../images/logokm.png" alt="logosmall">
+    <!--LOGO2: ENDS-->
+  </div>
 
-<div class="top-bar" id="sub-menu">
-  <!--LOGO1: BEGINS-->
-  <div class="top-bar-left hide-for-small-only">
-    <img id="logo" src="../images/logokm.png" alt="">
+  <div class="top-bar" id="sub-menu">
+    <!--LOGO1: BEGINS-->
+    <div class="top-bar-left hide-for-small-only">
+      <img id="logo" src="../images/logokm.png" alt="logolarge">
+    </div>
+    <!--LOGO1: ENDS-->
+    <div class="top-bar-right">
+      <ul class="dropdown menu" data-dropdown-menu>
+        <li><a href="../index.html">HOME</a></li>
+        <li><a href="services.html">SERVICES</a></li>
+        <li><a href="portfolio.html">PROFILE</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+      </ul>
+    </div>
   </div>
-  <!--LOGO1: ENDS-->
-  <div class="top-bar-right">
-    <ul class="dropdown menu" data-dropdown-menu>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="services.html">SERVICES</a></li>
-      <li><a href="portfolio.html">PROFILE</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-  </div>
-</div>
-<!--NAV: ENDS-->
-</header>
-<!--HEADER: ENDS-->
+  <!--NAV: ENDS-->
+  </header>
+  <!--HEADER: ENDS-->
 
 
 
@@ -54,7 +55,7 @@
 </section>
 <!--PLACEHOLDER-->
 <!--START OF DIVIDER 1-->
-<section class="row divider" id="h-overview"><h2>Overview</h2></section>
+<section class="row-divider" id="h-overview"><h2>Overview</h2></section>
 <!--END OF DIVIDER 1-->
 <!--BEGINNING OVERVIEW PARAGRAPH-->
 <section class="row">
@@ -81,14 +82,13 @@ expectations.</p>
 </section>
 <!--ENDING OVERVIEW PARAGRAPH-->
 <!-- BEGINNING OF DIVIDER 2 -->
-<section class="row divider"><h2>Produces</h2></section>
+<section class="row-divider"><h2>Produces</h2></section>
 <!-- END OF DIVIDER 2 -->
 
 <!-- BEGINNING OF SERVICE -->
 <section class="row">
-<div class="column large-4 medium-6 small-12">
-<h3>We produce the following types of videos:</h3>
-<ul id="h-overview-list">
+<div class="column large-12 medium-12 small-12 h-packages">
+<ul class="h-package">We produce the following types of videos:</ul>
 <li>Corporate</li>
 <li>Marketing</li>
 <li>Public Relations</li>
