--- a/pages/audio-visual.html
+++ b/pages/audio-visual.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audio-Visual</title>
-
+  <meta name="author" content="Francis Rivera">
   <link rel="stylesheet" href="../css/foundation.css">
   <link rel="stylesheet" href="../css/app.css">
   <link rel="icon" type="ico/png" href="../images/favicon.ico/favicon.ico"/>
@@ -31,7 +31,7 @@
   <!--LOGO1: ENDS-->
   <div class="top-bar-right">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li><a href="index.html">HOME</a></li>
+      <li><a href="../index.html">HOME</a></li>
       <li><a href="services.html">SERVICES</a></li>
       <li><a href="portfolio.html">PROFILE</a></li>
       <li><a href="contact.html">CONTACT</a></li>
@@ -55,7 +55,7 @@
 </section>
 <!--PLACEHOLDER-->
 <!--START OF DIVIDER 1-->
-<section class="row divider" id="h-overview"><h2>Overview</h2></section>
+<section class="row-divider" id="h-overview"><h2>Audio-Visual</h2></section>
 <!--END OF DIVIDER 1-->
 <!--BEGINNING OVERVIEW PARAGRAPH-->
 <section class="row">
@@ -64,17 +64,21 @@
   Kingston Media offers high-definition projectors, large event
   screens, lighting, sound and other elements to make a real
   impact at your live event.</p>
+</article>
+</secion>
+<section class="row">
+<article  class="column large-12 medium-12 small-12 h-packages">
+  <ul class="h-package">Audio/Visual Equipment</ul>
 
-  Audio/Visual Equipment
-
-  Blackmagic ATEM Television studio switcher
-  1080p High-Def Projectors
-  Large FastFold Projection Screens
-  4 Peavy PR15 Speakers w/ Tripods
-  Peavy GPS 1500 Amp w/ SKB Casey Shaughnessy
-  Lectrosonic Wireless lavalier micrphones
-  Shure handheld wireless microphone
+  <li>Blackmagic ATEM Television studio switcher</li>
+  <li>1080p High-Def Projectors</li>
+  <li>Large FastFold Projection Screens</li>
+  <li>4 Peavy PR15 Speakers w/ Tripods</li>
+  <li>Peavy GPS 1500 Amp w/ SKB Casey Shaughnessy</li>
+  <li>Lectrosonic Wireless lavalier micrphones</li>
+  <li>Shure handheld wireless microphone</li>
 <!--START OTHER SERVICES-->
+
 <section class="row" id="h-services">
   <figure class="column large-12 medium-12 small-12">
     <div class="column large-6 medium-6 small-12" id="h-labels"><h2><a href="services.html">Overview</a></h2>
@@ -128,7 +132,8 @@
 
 <!--COPYRIGHT: BEGINS-->
 <div class="row">
-<p class="column large-12 medium-12 small-12" id="copyright">&copy; Copyright 2017 Kingston Media | All Rights Reserved | Site by <a href="x">FHKP</a>
+<p class="column large-12 medium-12 small-12" id="copyright">
+  &copy; Copyright 2017 Kingston Media | All Rights Reserved | Site by <a href="x">FHKP</a>
 </p>
 </div>
 <!--COPYRIGHT: ENDS-->
