--- a/pages/production.html
+++ b/pages/production.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Production</title>
-
+  <meta name="author" content="Huiyan Guima">
   <link rel="stylesheet" href="../css/foundation.css">
   <link rel="stylesheet" href="../css/app.css">
   <link rel="icon" type="ico/png" href="../images/favicon.ico/favicon.ico"/>
@@ -31,7 +31,7 @@
   <!--LOGO1: ENDS-->
   <div class="top-bar-right">
     <ul class="dropdown menu" data-dropdown-menu>
-      <li><a href="index.html">HOME</a></li>
+      <li><a href="../index.html">HOME</a></li>
       <li><a href="services.html">SERVICES</a></li>
       <li><a href="portfolio.html">PROFILE</a></li>
       <li><a href="contact.html">CONTACT</a></li>
